--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 
 
-            <input type="text" placeholder="Todo...">
-            <button type="submit">Add+</button>
+            <input type="text" placeholder="Todo..." class="input-field">
+            <button type="submit" class="input-field">Add+</button>
         </form>
 
         <div class="lanes">
