project 6 - kanban app done for now....

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
     <link rel="stylesheet" href="style.css">
-    <script src="drag.js"></script>
-    <script src="todo.js"></script>
-    <title>Document</title>
+    <script src="drag.js" defer></script>
+    <script src="todo.js" defer></script>
+    <title>Kanban Board</title>
 </head>
 
 <body>
@@ -17,11 +18,8 @@
     <div class="board">
 
         <form action="" class="" id="todo-form">
-
-
-
-            <input type="text" placeholder="Todo..." class="input-field">
-            <button type="submit" class="input-field">Add+</button>
+            <input type="text" placeholder="Todo..." id="todo-input" class="input-field">
+            <button type="submit" class="input-field">Add +</button>
         </form>
 
         <div class="lanes">
@@ -29,6 +27,7 @@
             <!-- Section for Todo item -->
             <div class="swim-lane" id="todo-lane">
 
+                
                 <h3 class="heading">TODO</h3>
 
                 <p class="task" draggable="true">Get Food</p>
@@ -76,6 +75,7 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
