designed a litle change

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
                 
                 <h3 class="heading">TODO</h3>
-
+<!-- 
                 <p class="task" draggable="true">Get Food</p>
                 <p class="task" draggable="true">Feed baby</p>
                 <p class="task" draggable="true">Clean back yard</p>
-                <p class="task" draggable="true">Go to gym</p>
+                <p class="task" draggable="true">Go to gym</p> -->
 
             </div>
 
@@ -41,11 +41,11 @@
             <div class="swim-lane">
 
                 <h3 class="heading">Working</h3>
-
+<!-- 
                 <p class="task" draggable="true">Get Food</p>
                 <p class="task" draggable="true">Feed baby</p>
                 <p class="task" draggable="true">Clean back yard</p>
-                <p class="task" draggable="true">Go to gym</p>
+                <p class="task" draggable="true">Go to gym</p> -->
 
             </div>
 
@@ -53,11 +53,11 @@
             <div class="swim-lane">
 
                 <h3 class="heading">Done</h3>
-
+<!-- 
                 <p class="task" draggable="true">Get Food</p>
                 <p class="task" draggable="true">Feed baby</p>
                 <p class="task" draggable="true">Clean back yard</p>
-                <p class="task" draggable="true">Go to gym</p>
+                <p class="task" draggable="true">Go to gym</p> -->
 
             </div>
 
@@ -65,11 +65,11 @@
             <div class="swim-lane">
 
                 <h3 class="heading">Paused</h3>
-
+<!-- 
                 <p class="task" draggable="true">Get Food</p>
                 <p class="task" draggable="true">Feed baby</p>
                 <p class="task" draggable="true">Clean back yard</p>
-                <p class="task" draggable="true">Go to gym</p>
+                <p class="task" draggable="true">Go to gym</p> -->
 
             </div>
         </div>
